[package]
name = "bevy_gpu_test"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A test harness for running GPU compute shaders in Bevy and reading back results for CPU-side assertions"
repository = "https://github.com/peterellisjones/bevy_gpu_test"
keywords = ["bevy", "gpu", "testing", "compute", "wgsl"]
categories = ["game-development", "development-tools::testing", "rendering::engine"]

[dependencies]
bevy = { version = "^0.18", default-features = false, features = [
    "bevy_asset",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_window",
    "bevy_winit",
    "bevy_log",
] }

[dev-dependencies]
bytemuck = { version = "*", features = ["derive"] }

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
needless_pass_by_value = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
